# greedy_snake

./: CMakeLists.txt  Half.txt  fighter.c  half2.txt  tipFromAssistance.c  tmp.c
Picture/: CMakeLists.txt  Snake.c  tmp.c
递交材料/: fighter.c  贪吃蛇游戏.md
